2004-05-09  Dan Wilks  <Dan_Wilks@intuit.com>
    
	* winclipboard.h: Add extern prototypes for winDebug, winErrorFVerb
	copied from winmsg.h.
	* winclipboardinit.c (winFixClipboardChain): Post rather than send the
	reinit message to the clipboard window.  Sending the message caused,
	or possibly just exacerbated an existing, race condition that would
	cause the X server to hang when coming back from a remote desktop
	session.
	* winclipboardwndproc.c (winProcessXEventsTimeout): switch to new
	logging api's.
	* winclipboardwindproc.c (winClipboardWindowProc): switch to new 
	logging api's.  Add some additional debug logging.  Make best effort 
	to prevent our window appearing twice in the clipboard chain.  Also 
	detect loops when they occur and try to behave in a reasonable way.